--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@serwist/next": "^9.5.6",
+    "@supabase/supabase-js": "^2.97.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
+    "mammoth": "^1.11.0",
     "mastra": "^1.1.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "radix-ui": "^1.4.3",
